# VR_Keyboard

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
Fonts/rm-typerighter-medium/: attribution.txt  license.txt  read me.txt
Images/: TextInputUtil_forModders_withVR.xcf  VR_Keyboard.xcf
Papyrus/: skyrimse.ppj
Papyrus/Scripts/: TextInputUtil.pex  VRKeyboard.pex
Papyrus/Source/: TextInputUtil.psc  VRKeyboard.psc
cmake/: FindOpenVR.cmake  x64-windows-skse.cmake
src/: CMakeLists.txt  Events.h  PCH.h  Papyrus.h  VRKeyboard.h  VRKeyboardPapyrus.h  Web.h  main.cpp
src/Web/: AppComponent.hpp
src/Web/controllers/: HelloController.hpp
src/Web/dtos/: TestDto.hpp
